release 1.3 (06-2010)
- Removed support for resource methods utilizing @FormParam and consuming
  "multipart/form-data". This functionality has been replaced by @FormDataParam
  in the jersey-multipart module.
- Fixed issue 531
  https://jersey.dev.java.net/issues/show_bug.cgi?id=531
  WADL generation should not modify the abstract model when @FormParam is
  declared in a resource method parameter and the @Consumes is absent.
- Fixed issue 538
  https://jersey.dev.java.net/issues/show_bug.cgi?id=538
  The reference to the registered application may be injected as follows:
    @Context Application app;
- Upgrade the version of Abdera used in the contribs/jersey-atom-abdera to 1.0.
- Guice integration supports the @Inject binding of common
  JAX-RS and Jersey dependencies such as UriInfo and ExtendedUriInfo.
  Extend from com.sun.jersey.guice.JerseyServletModule, instead of
  com.google.inject.servlet.ServletModule, to register these bindings.
- GlassFish v3 integration
  Instead of one big uber JAR, jersey-gf-bundle.jar, individual Jersey modules 
  are integrated to GlassFish to allow better modularization
  and alignment with non GlassFish environment
- Fixed issue 436
  https://jersey.dev.java.net/issues/show_bug.cgi?id=436
  Resources may be looked up using a URI via methods on 
  com.sun.jersey.api.core.ResourceContext.
- Fixed issue 489
  https://jersey.dev.java.net/issues/show_bug.cgi?id=489
  Support configurable namespace separators for JAXB/JSON.
  See com.sun.jersey.api.json.JSONConfiguration#nsSeparator
- Fixed Jersey versioning issue for GlassFish when a version of
  Jersey is deployed in the war that is different to the version of Jersey
  version distributed with GlassFish.
  META-INF/sevices files will be ignored if the corresponding
  META-INF/MANIFEST.MF of the same jar contains a Bundle-SymbolicName
  beginning with "com.sun.jersey" and a Bundle-Version that is not equal
  to the Bundle-Version declared in the META-INF/MANIFEST.MF for the same jar