@@ -1,0 +1,1 @@
+com.sun.jersey.multipart.impl.MultiPartWriter
