@@ -1,4 +1,0 @@
-com.sun.jersey.multipart.impl.FormDataMultiPartDispatchProvider
-com.sun.jersey.multipart.impl.MultiPartConfigProvider
-com.sun.jersey.multipart.impl.MultiPartReaderServerSide
-com.sun.jersey.multipart.impl.MultiPartWriter
